--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,6 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
+        android:inputType="textPassword"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"/>
     <TextView
@@ -63,6 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
+        android:inputType="textPassword"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"/>
     <Button
