--- a/app/src/main/res/layout/modal_merekban.xml
+++ b/app/src/main/res/layout/modal_merekban.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/txt_dia"
+        android:id="@+id/tvJudul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -17,7 +17,7 @@
         android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/etKomplain"
+        android:id="@+id/etTipeBan"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="15dp"
