--- a/app/src/main/res/layout/modal_tipeban.xml
+++ b/app/src/main/res/layout/modal_tipeban.xml
@@ -17,7 +17,7 @@
         android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/etKomplain"
+        android:id="@+id/etTipeBan"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="15dp"
