--- a/app/src/main/res/layout/stokban_item.xml
+++ b/app/src/main/res/layout/stokban_item.xml
@@ -20,31 +20,36 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/etUkuran"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Uk"
-                android:textSize="18sp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:textSize="18sp" />
+
             <TextView
+                android:id="@+id/etJumlah"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Jumlah"
-                android:textSize="18sp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/etExpired"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Exp"
-                android:textSize="18sp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/etHarga"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Harga Barang"
-                android:textSize="18sp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
