--- a/app/src/main/res/layout/activity_informasi_stokban.xml
+++ b/app/src/main/res/layout/activity_informasi_stokban.xml
@@ -64,12 +64,12 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="13dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="left"
                     android:text="Ban Semi Slick"
-                    android:textSize="25sp"
+                    android:textSize="18sp"
                     android:id="@+id/tvBan"
                     android:textStyle="bold"/>
             </LinearLayout>
@@ -80,11 +80,11 @@
                 android:layout_weight="30">
                 <Button
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:text="Tambah"
                     android:background="@drawable/button"
-                    android:padding="12dp"
-                    android:textSize="18sp"
+                    android:padding="5dp"
+                    android:textSize="14sp"
                     android:textColor="@color/Putih"/>
             </LinearLayout>
         </LinearLayout>
