--- a/app/src/main/res/layout/tipeban_item.xml
+++ b/app/src/main/res/layout/tipeban_item.xml
@@ -20,35 +20,33 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingLeft="15dp"
                 android:text="Tipe Ban"
-                android:textStyle="bold"
-                android:textSize="22dp"
+                android:textSize="16dp"
                 android:id="@+id/tv_tipeban"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="end"
             android:layout_weight="15">
 
             <ImageView
                 android:id="@+id/btnUbahTipe"
-                android:layout_width="30dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_edit" />
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:background="@drawable/ic_editmerek" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_weight="15"
             android:layout_width="0dp"
-            android:gravity="end"
             android:layout_height="match_parent">
             <ImageView
                 android:id="@+id/btnDelete"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
                 android:background="@drawable/ic_delete" />
 
         </LinearLayout>
