--- a/app/src/main/res/layout/tipeban_item.xml
+++ b/app/src/main/res/layout/tipeban_item.xml
@@ -13,7 +13,7 @@
         android:weightSum="100"
         android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_weight="70"
+            android:layout_weight="80"
             android:layout_width="0dp"
             android:orientation="vertical"
             android:layout_height="match_parent">
@@ -29,9 +29,11 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="15">
+            android:gravity="end"
+            android:layout_weight="10">
 
             <ImageView
+
                 android:id="@+id/btnUbahTipe"
                 android:layout_width="27dp"
                 android:layout_height="27dp"
@@ -40,8 +42,10 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_weight="15"
+            android:layout_weight="10"
             android:layout_width="0dp"
+            android:gravity="end"
+            android:layout_gravity="end"
             android:layout_height="match_parent">
             <ImageView
                 android:id="@+id/btnDelete"
