--- a/app/src/main/res/layout/stokban_item.xml
+++ b/app/src/main/res/layout/stokban_item.xml
@@ -14,7 +14,7 @@
         android:weightSum="100"
         android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_weight="80"
+            android:layout_weight="70"
             android:layout_width="0dp"
             android:orientation="vertical"
             android:layout_height="match_parent">
@@ -61,8 +61,23 @@
             <ImageView
                 android:layout_width="33dp"
                 android:layout_height="33dp"
-                android:background="@drawable/ic_edit"
+                android:background="@drawable/ic_editstock"
                 />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_weight="10">
+            <ImageView
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:background="@drawable/ic_editmerek"
+                />
+
 
         </LinearLayout>
 
