--- a/app/src/main/res/layout/activity_ban.xml
+++ b/app/src/main/res/layout/activity_ban.xml
@@ -56,9 +56,10 @@
         android:orientation="vertical"
         android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.SearchView
+        <SearchView
             android:layout_width="match_parent"
             android:layout_margin="15dp"
+            android:id="@+id/search"
             android:background="@drawable/bg_search"
             android:layout_height="40dp"/>
 
