--- a/app/src/main/res/layout/activity_informasi_stokban.xml
+++ b/app/src/main/res/layout/activity_informasi_stokban.xml
@@ -85,6 +85,7 @@
                     android:background="@drawable/button"
                     android:padding="5dp"
                     android:textSize="14sp"
+                    android:id="@+id/btnTambah"
                     android:textColor="@color/Putih"/>
             </LinearLayout>
         </LinearLayout>
