--- a/app/src/main/res/layout/stokban_item.xml
+++ b/app/src/main/res/layout/stokban_item.xml
@@ -75,11 +75,12 @@
             android:layout_height="match_parent"
             android:layout_marginRight="10dp"
             android:layout_weight="10">
+
             <ImageView
+                android:id="@+id/btnUbahBan"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
-                android:background="@drawable/ic_editmerek"
-                />
+                android:background="@drawable/ic_editmerek" />
 
 
         </LinearLayout>
