--- a/app/src/main/res/layout/activity_informasi_stokban.xml
+++ b/app/src/main/res/layout/activity_informasi_stokban.xml
@@ -24,7 +24,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="start"
-                android:id="@+id/ivBack"
+                android:id="@+id/ivBackStockBan"
                 android:src="@drawable/ic_back"/>
 
             <TextView
