--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -25,7 +25,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="start"
-                android:id="@+id/ivBack"
+                android:id="@+id/ivNotifBack"
                 android:src="@drawable/ic_back"/>
 
             <TextView
