--- a/app/src/main/res/layout/stoksuspensi_item.xml
+++ b/app/src/main/res/layout/stoksuspensi_item.xml
@@ -69,7 +69,7 @@
 
             <ImageView
                 android:id="@+id/btnUbahSuspensi"
-                android:layout_width="wrap_content"
+                android:layout_width="12dp"
                 android:layout_height="33dp"
                 android:background="@drawable/ic_edit" />
 
