--- a/app/src/main/res/layout/activity_informasi_stokvelg.xml
+++ b/app/src/main/res/layout/activity_informasi_stokvelg.xml
@@ -15,30 +15,30 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_gravity="center"
             android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="center"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" >
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <ImageView
-                android:layout_marginRight="10dp"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="start"
-                android:src="@drawable/ic_back"/>
+                android:layout_marginRight="10dp"
+                android:id="@+id/ivBack"
+                android:src="@drawable/ic_back" />
 
             <TextView
+                android:id="@+id/toolbar_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Informasi Stock"
                 android:textColor="@color/Putih"
-                android:textSize="25dp"
-                android:layout_gravity="center"
-                android:id="@+id/toolbar_title" />
+                android:textSize="25dp" />
 
 
         </androidx.appcompat.widget.Toolbar>
-
 
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -64,31 +64,35 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_marginTop="13dp"
+                    android:id="@+id/etNama"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="13dp"
                     android:gravity="left"
                     android:text="OZ Racing"
                     android:textSize="18sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="30">
+
                 <Button
+                    android:id="@+id/btnTambah"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Tambah"
+                    android:layout_height="match_parent"
                     android:background="@drawable/button"
                     android:padding="5dp"
-                    android:textSize="14sp"
-                    android:textColor="@color/Putih"/>
+                    android:text="Tambah"
+                    android:textColor="@color/Putih"
+                    android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvVelg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="15dp"
