--- a/app/src/main/res/layout/activity_velg.xml
+++ b/app/src/main/res/layout/activity_velg.xml
@@ -24,6 +24,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="start"
+                android:id="@+id/tvBack"
                 android:src="@drawable/ic_back"/>
 
             <TextView
@@ -42,129 +43,142 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:orientation="vertical"
         android:layout_height="match_parent">
 
-        <SearchView
-            android:layout_width="match_parent"
-            android:layout_margin="15dp"
-            android:id="@+id/search"
-            android:background="@drawable/bg_search"
-            android:layout_height="40dp"/>
-
         <LinearLayout
-            android:id="@+id/velgOriginal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:padding="15dp"
-                android:background="@drawable/bg_merekban"
-                android:layout_height="55dp">
+            android:orientation="vertical"
+            android:layout_height="match_parent">
 
+            <SearchView
+                android:layout_width="match_parent"
+                android:layout_margin="15dp"
+                android:id="@+id/search"
+                android:background="@drawable/bg_search"
+                android:layout_height="40dp"/>
+
+            <LinearLayout
+                android:id="@+id/velgOriginal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:weightSum="100"
-                    android:layout_height="wrap_content">
-                    <LinearLayout
-                        android:layout_weight="90"
-                        android:layout_width="0dp"
-                        android:orientation="vertical"
-                        android:layout_height="match_parent">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Velg Original"
-                            android:textStyle="bold"
-                            android:textSize="20dp"/>
-                    </LinearLayout>
+                    android:orientation="vertical"
+                    android:padding="15dp"
+                    android:background="@drawable/bg_merekban"
+                    android:layout_height="55dp">
 
                     <LinearLayout
-                        android:layout_weight="10"
-                        android:layout_width="0dp"
-                        android:gravity="end"
-                        android:layout_height="match_parent">
-                        <ImageView
-                            android:layout_width="27dp"
-                            android:layout_height="27dp"
-                            android:background="@drawable/ic_addmerek"/>
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:weightSum="100"
+                        android:layout_height="wrap_content">
+                        <LinearLayout
+                            android:layout_weight="90"
+                            android:layout_width="0dp"
+                            android:orientation="vertical"
+                            android:layout_height="match_parent">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Velg Original"
+                                android:textStyle="bold"
+                                android:textSize="20dp"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_weight="10"
+                            android:layout_width="0dp"
+                            android:gravity="end"
+                            android:layout_height="match_parent">
+
+                            <ImageView
+                                android:id="@+id/btnTambahOriginal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:background="@drawable/ic_addmerek" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
                 </LinearLayout>
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvVelgOriginal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="vertical">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
             </LinearLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical">
-
-            </androidx.recyclerview.widget.RecyclerView>
-
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/velgReplika"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
             <LinearLayout
+                android:id="@+id/velgReplika"
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:padding="15dp"
-                android:background="@drawable/bg_merekban"
-                android:layout_height="55dp">
-
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:weightSum="100"
-                    android:layout_height="wrap_content">
-                    <LinearLayout
-                        android:layout_weight="90"
-                        android:layout_width="0dp"
-                        android:orientation="vertical"
-                        android:layout_height="match_parent">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Velg Replika"
-                            android:textStyle="bold"
-                            android:textSize="20dp"/>
-                    </LinearLayout>
+                    android:orientation="vertical"
+                    android:padding="15dp"
+                    android:background="@drawable/bg_merekban"
+                    android:layout_height="55dp">
 
                     <LinearLayout
-                        android:layout_weight="10"
-                        android:layout_width="0dp"
-                        android:gravity="end"
-                        android:layout_height="match_parent">
-                        <ImageView
-                            android:id="@+id/btnTambahTipe"
-                            android:layout_width="27dp"
-                            android:layout_height="27dp"
-                            android:background="@drawable/ic_addmerek"/>
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:weightSum="100"
+                        android:layout_height="wrap_content">
+                        <LinearLayout
+                            android:layout_weight="90"
+                            android:layout_width="0dp"
+                            android:orientation="vertical"
+                            android:layout_height="match_parent">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Velg Replika"
+                                android:textStyle="bold"
+                                android:textSize="20dp"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_weight="10"
+                            android:layout_width="0dp"
+                            android:gravity="end"
+                            android:layout_height="match_parent">
+
+                            <ImageView
+                                android:id="@+id/btnTambahReplika"
+                                android:layout_width="wrap_content"
+                                android:layout_height="27dp"
+                                android:background="@drawable/ic_addmerek" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
                 </LinearLayout>
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvVelgReplika"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="vertical">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
             </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical">
-
-            </androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
 
+    </ScrollView>
 
-    </LinearLayout>
+
 
 </LinearLayout>
