--- a/app/src/main/res/layout/merek_suspensi.xml
+++ b/app/src/main/res/layout/merek_suspensi.xml
@@ -35,8 +35,8 @@
             <ImageView
 
                 android:id="@+id/btnUbahMerekSuspensi"
-                android:layout_width="27dp"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@drawable/ic_editmerek" />
 
         </LinearLayout>
