--- a/app/src/main/res/layout/newmerekvelg_item.xml
+++ b/app/src/main/res/layout/newmerekvelg_item.xml
@@ -16,12 +16,14 @@
             android:layout_width="0dp"
             android:orientation="vertical"
             android:layout_height="match_parent">
+
             <TextView
+                android:id="@+id/tvNama"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="15dp"
                 android:text="OZ Racing"
-                android:textSize="16dp"/>
+                android:textSize="16dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -32,6 +34,7 @@
 
             <ImageView
 
+                android:id="@+id/btnUbah"
                 android:layout_width="27dp"
                 android:layout_height="27dp"
                 android:background="@drawable/ic_editmerek" />
@@ -44,7 +47,9 @@
             android:gravity="end"
             android:layout_gravity="end"
             android:layout_height="match_parent">
+
             <ImageView
+                android:id="@+id/btnDelete"
                 android:layout_width="27dp"
                 android:layout_height="27dp"
                 android:background="@drawable/ic_delete" />
