--- a/app/src/main/res/layout/stokvelg_item.xml
+++ b/app/src/main/res/layout/stokvelg_item.xml
@@ -19,14 +19,9 @@
             android:orientation="vertical"
             android:layout_height="match_parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Type"
-                android:textColor="#000000"
-                android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/etSpek"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Spek"
@@ -34,6 +29,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/etJumlah"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Jumlah"
@@ -41,6 +37,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/etHarga"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Harga Barang"
@@ -56,11 +53,10 @@
             android:layout_weight="10">
 
             <ImageView
+                android:id="@+id/btnEdit"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
-                android:background="@drawable/ic_editstock"
-                />
-
+                android:background="@drawable/ic_editstock" />
 
 
         </LinearLayout>
@@ -72,6 +68,7 @@
             android:layout_weight="10">
 
             <ImageView
+                android:id="@+id/btnUbah"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
                 android:background="@drawable/ic_editmerek" />
@@ -85,6 +82,7 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/btnDelete"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
                 android:background="@drawable/ic_delete" />
